# app/controllers/api/v1/physical_products_controller.rb
@@ -2,65 +2,54 @@ module Api
   module V1
     class PhysicalProductsController < ApplicationController
       before_action :set_physical_product, only: [ :show, :update, :destroy, :purchase, :shipping_cost ]
-      skip_before_action :authorized, only: [ :index, :show, :shipping_cost ]
-      before_action :admin_authorized, only: [ :create, :update, :destroy ]
+      before_action :authenticate_admin, only: [ :create, :update, :destroy ]
 
       # GET /api/v1/physical_products
       def index
-        @physical_products = PhysicalProduct.includes(:categories, :attachments)
-        render json: @physical_products, include: [ :categories, :attachments ]
+        physical_products = PhysicalProduct.includes(:categories, :attachments)
+        render_with(physical_products)
       end
 
       # GET /api/v1/physical_products/:id
       def show
-        render json: @physical_product, include: [ :categories, :attachments ]
+        render_with(@physical_product)
       end
 
       # POST /api/v1/physical_products
       def create
-        @physical_product = PhysicalProduct.new(physical_product_params)
-        @physical_product.creator = current_user
+        physical_product = PhysicalProduct.new(physical_product_params)
+        physical_product.creator = current_user
 
-        if @physical_product.save
-          render json: @physical_product, status: :created, include: [ :categories, :attachments ]
-        else
-          render json: { errors: @physical_product.errors.full_messages }, status: :unprocessable_entity
-        end
+        render_with(physical_product)
       end
 
       # PUT /api/v1/physical_products/:id
       def update
-        if @physical_product.update(physical_product_params)
-          render json: @physical_product, include: [ :categories, :attachments ]
-        else
-          render json: { errors: @physical_product.errors.full_messages }, status: :unprocessable_entity
-        end
+        @physical_product.update(physical_product_params)
+        render_with(@physical_product)
       end
 
       # DELETE /api/v1/physical_products/:id
       def destroy
-        @physical_product.destroy
-        head :no_content
+        render_with(@physical_product)
       end
 
       # POST /api/v1/physical_products/:id/purchase
       def purchase
-        # Solo los usuarios autenticados pueden comprar
         begin
           quantity = params[:quantity].to_i || 1
           purchase = @physical_product.purchase_by(current_user, quantity)
           render json: {
-            message: 'Producto físico comprado con éxito',
+            message: 'Physical product purchased successfully',
             purchase: purchase
           }
         rescue StandardError => e
-          render json: { error: e.message }, status: :unprocessable_entity
+          raise ApiExceptions::BaseException.new(:CANNOT_PURCHASE, [], { error: e.message })
         end
       end
 
       # GET /api/v1/physical_products/:id/shipping_cost
       def shipping_cost
-        # Asegurar que el costo de envío se devuelva como un número, no como cadena
         render json: { shipping_cost: @physical_product.shipping_cost.to_f }
       end
 
@@ -69,7 +58,7 @@ module Api
       def set_physical_product
         @physical_product = PhysicalProduct.find(params[:id])
       rescue ActiveRecord::RecordNotFound
-        render json: { error: 'Producto físico no encontrado' }, status: :not_found
+        raise ApiExceptions::BaseException.new(:RECORD_NOT_FOUND, [], {})
       end
 
       def physical_product_params
